manifest/skywalking-helm/templates/oap-deployment.yaml
---
# Source: skywalking-helm/templates/oap-deployment.yaml
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: release-name
    chart: skywalking-helm-4.5.0
    component: "oap"
    heritage: Helm
    release: release-name
  name: release-name-skywalking-helm-oap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: release-name
      component: "oap"
      release: release-name
  template:
    metadata:
      labels:
        app: release-name
        component: "oap"
        release: release-name
    spec:
      serviceAccountName: release-name-skywalking-helm-oap
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              topologyKey: kubernetes.io/hostname
              labelSelector:
                matchLabels:
                  app: "release-name"
                  release: "release-name"
                  component: "oap"
      nodeSelector:
        shilintan.io/service-type-monitor-tracing: v
      containers:
      - name: oap
        image: skywalking.docker.scarf.sh/apache/skywalking-oap-server:9.6.0-java17
        imagePullPolicy: IfNotPresent
        livenessProbe:
          initialDelaySeconds: 5
          periodSeconds: 20
          tcpSocket:
            port: 12800

        startupProbe:
          failureThreshold: 9
          periodSeconds: 10
          tcpSocket:
            port: 12800

        readinessProbe:
          initialDelaySeconds: 5
          periodSeconds: 20
          tcpSocket:
            port: 12800

        ports:
        - containerPort: 11800
          name: grpc
        - containerPort: 12800
          name: rest
        resources:
          limits:
            cpu: 8
            memory: 8Gi
          requests:
            cpu: 100m
            memory: 1Gi
        volumeMounts:

      volumes:
