manifest/skywalking-helm/templates/ui-deployment.yaml
---
# Source: skywalking-helm/templates/ui-deployment.yaml
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-skywalking-helm-ui
  labels:
    app: release-name
    chart: skywalking-helm-4.5.0
    component: "ui"
    heritage: Helm
    release: release-name
spec:
  replicas: 1
  selector:
    matchLabels:
      app: release-name
      component: "ui"
      release: release-name
  template:
    metadata:
      labels:
        app: release-name
        component: "ui"
        release: release-name
    spec:

      affinity:
      nodeSelector:
        shilintan.io/service-type-monitor-tracing: v
      containers:
      - name: ui
        image: skywalking.docker.scarf.sh/apache/skywalking-ui:9.6.0-java17
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: page
